@@ -1772,8 +1772,9 @@ class UTIL
         //$this->log->info("END UTIL: " . $this->PHP_FILE);
     }
 
-    static public function setTimezone()
+    public function setTimezone()
     {
+        /*
         if( strtoupper(substr(PHP_OS, 0, 3)) === 'WIN' )
         {
             $system_timezone = exec('tzutil /g');
@@ -1793,7 +1794,31 @@ class UTIL
         $timezone_name = timezone_name_from_abbr($system_timezone);
         if( !$timezone_name )
             $timezone_name = "GMT";
+
         date_default_timezone_set($timezone_name);
+        */
+
+        $configroot = DH::findFirstElementOrDie('config', $this->xmlDoc);
+
+        $devicesroot = DH::findFirstElementOrDie('devices', $configroot);
+
+
+        $localhostroot = DH::findFirstElementByNameAttrOrDie('entry', 'localhost.localdomain', $devicesroot);
+
+
+        $deviceconfigroot = DH::findFirstElement('deviceconfig', $localhostroot);
+
+        $systemroot = DH::findFirstElement('system', $deviceconfigroot);
+        if( $systemroot !== FALSE )
+        {
+            $timezone = DH::findFirstElement('timezone', $systemroot);
+            if( $timezone )
+            {
+                $this->pan->timezone = $timezone->textContent;
+                date_default_timezone_set( $timezone->textContent );
+                PH::print_stdout( " - PAN-OS Device timezone: ".$this->pan->timezone ." is used. actual time: ".date('Y/m/d H:i:s') );
+            }
+        }
     }
 
     static public function shadow_ignoreInvalidAddressObjects()
